--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ hs_err_pid*
 
 ## Directory-based project format:
 .idea/
+
+#JFormDesigner
+out/
+
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
@@ -62,3 +66,4 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
